# Sistema-Inteligente-de-Optimizaci-n-de-Atenci-n-Hospitalaria-en-C-

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
data/: pacientes_demo.csv
docs/: informe.tex
gui/: HospitalGUI.mm
include/: Algoritmos.h  Benchmark.h  GestorMedicos.h  HistorialMedico.h  Hospital.h  Paciente.h
src/: Algoritmos.cpp  Benchmark.cpp  GestorMedicos.cpp  HistorialMedico.cpp  Hospital.cpp
